[gd_scene load_steps=8 format=3 uid="uid://d24y57ejkh6v0"]

[ext_resource type="Texture2D" uid="uid://bapep5uwhtcul" path="res://terrain/assets/interior/wooden_door_b.png" id="1_2phmj"]
[ext_resource type="Script" path="res://components/scripts/door_component.gd" id="1_8kk0l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2r28q"]
size = Vector2(34, 11)

[sub_resource type="Animation" id="Animation_ifkfd"]
resource_name = "open"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_ce1lk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_whkrc"]
resource_name = "close"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v3q4r"]
_data = {
"RESET": SubResource("Animation_ce1lk"),
"close": SubResource("Animation_whkrc"),
"open": SubResource("Animation_ifkfd")
}

[node name="DoorComponent" type="Area2D" node_paths=PackedStringArray("_animation")]
z_index = 2
script = ExtResource("1_8kk0l")
_teleport_position = Vector2(1088, 200)
_animation = NodePath("Animation")

[node name="Texture" type="Sprite2D" parent="."]
texture = ExtResource("1_2phmj")
hframes = 2

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 15.5)
shape = SubResource("RectangleShape2D_2r28q")

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v3q4r")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="Animation" to="." method="_on_animation_finished"]
